Это уже второе изменение

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 </head>
 <body>
     <p>Git + GitHub</p>
+    <h2>Hello</h2>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, autem!</p>
+    <h2>Nope</h2>
 </body>
 </html>
