--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     <h2>Hello</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, autem!</p>
     <h2>Nope</h2>
+    <div class="dop">
+        <div class="button">
+            <div class="button_text">Это кнопка</div>
+        </div>
+    </div>
 </body>
 </html>
