--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
     </div>
     <hr>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, natus.
+    <ul>
+        <li>Элемент</li>
+        <li>Элемент</li>
+        <li>Элемент</li>
+    </ul>
 </body>
 </html>
