--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Текст rap</h1>
+    <h3>Текст rap & par</h3>
+    <h4>
+        <b>Текст не для rap</b>
+    </h4>
 </body>
 </html>
