--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <img src="" alt="нн">
+    <video src="">.</video>
+    <audio src="">.</audio>
 </body>
 </html>
