--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../git-test/css/main.css">
-    <title>Document</title>
+    <title>hh next</title>
 </head>
 <body>
     <h3>Текст rap & par</h3>
